[tool.poetry]
name = "toy_robot_simulator"
version = "0.1.0"
description = ""
authors = ["donfiguerres <lyndonfiguerres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toy-robot-simulator = "toy_robot_simulator.app:main"

[tool.mypy]
exclude = "tests"
